--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/style.css">
     <title>Juego del Ahorcado - Alura Challenges ONE</title>
 </head>
 <body>
@@ -14,15 +16,24 @@
             <h1><img class="logo" src="./asset/image/Logo.png" alt="Logo Alura"></h1>
         </div>
     </header>
-    <main>
+    <!-- <main>
         <div class="container">
             <button class="btn btn-start-game">Iniciar juego</button>
             <button class="btn btn-add-word">Agregar palabra</button>
         </div>
-    </main>
+    </main> -->
+    <section id="game" class="container game">
+        <div>
+            <canvas width=250 height=300 id="canvas">
+        </div>
+        <div>
+            <p class="word">palabra</p>
+        </div>
+    </section>
     <footer>
         <a href="https://github.com/soyXander" target="_blank">Gabriel Humerez Romero | Alura Challenge ONE</a>
     </footer>
+    <script type="text/javascript" src="./scripts/canvas.js"></script>
     <script type="text/javascript" src="./scripts/app.js"></script>
 </body>
 </html>
