--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <button class="btn btn-add-word">Agregar palabra</button>
         </div>
     </main> -->
-    <section id="game" class="container game">
+    <section class="container">
         <div>
-            <canvas width=250 height=300 id="canvas">
+            <canvas width=290 height=360>
         </div>
         <div>
             <p class="word">palabra</p>
